fixed overflow in detais page

--- a/src/pages/DetailsPage/DetailsPage.module.css
+++ b/src/pages/DetailsPage/DetailsPage.module.css
@@ -262,6 +262,7 @@ button {
     padding: 1rem 1rem 0 1rem;
     border-radius: 1rem 1rem 0 0;
     gap: 1rem;
+    overflow-y: unset;
     grid-column: 1 /-1;
     /* grid-row: 4 /14; */
     /* transform: translateY(17rem); */
